--- a/WSUI.Module/WSUI.Module.csproj
+++ b/WSUI.Module/WSUI.Module.csproj
@@ -157,6 +157,8 @@
     <Compile Include="Interface\Service\IWSCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\AllFilesDataTemplateSelector.cs" />
+    <Compile Include="Service\Behaviors\WSUIActualHeightBehavior.cs" />
+    <Compile Include="Service\Behaviors\WSUIListboxSelectOnClickBehavior.cs" />
     <Compile Include="Service\ContactDataTemplateSelector.cs" />
     <Compile Include="Service\ContactHelpers.cs" />
     <Compile Include="Service\DateToStringConverter.cs" />
