--- a/WSUI.Core/WSUI.Core.csproj
+++ b/WSUI.Core/WSUI.Core.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Events\WSUIShowFolder.cs" />
     <Compile Include="Extensions\CommonExtensions.cs" />
     <Compile Include="Extensions\FieldsExtensions.cs" />
+    <Compile Include="Extensions\OutlookExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Extensions\UiExtensions.cs" />
     <Compile Include="Helpers\DetectEncoding\EncodingTools.cs" />
