--- a/WSGen/app.config
+++ b/WSGen/app.config
@@ -31,6 +31,9 @@
             <setting name="SetupProjectFile" serializeAs="String">
                 <value>\WSUI.OutlookPlugin\WSUI.OutlookPluginSetup\Product.wxs</value>
             </setting>
+            <setting name="BuildCount" serializeAs="String">
+                <value>1</value>
+            </setting>
         </WSGen.Properties.Settings>
     </applicationSettings>
     <userSettings>
