build number new

--- a/Toolkits/wsgen.exe.config
+++ b/Toolkits/wsgen.exe.config
@@ -1,14 +1,11 @@
 <?xml version="1.0"?>
 <configuration>
     <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="WSGen.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
-        </sectionGroup>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="WSGen.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="WSGen.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
-    <applicationSettings>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup><userSettings>
         <WSGen.Properties.Settings>
             <setting name="BulidNumberFilename" serializeAs="String">
                 <value>wsui.number</value>
@@ -19,15 +16,6 @@
             <setting name="VersionFilename" serializeAs="String">
                 <value>Version.cs</value>
             </setting>
-            <setting name="ProductVersion" serializeAs="String">
-                <value>"ProductVersion" = "8:[1-9]{1}\.[0-9]{1}\.[0-9]{1}"</value>
-            </setting>
-            <setting name="ProductCode" serializeAs="String">
-                <value>"ProductCode" = "8:\{[0-9a-fA-F]{8}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{12}\}"</value>
-            </setting>
-            <setting name="ProductVersionTemplate" serializeAs="String">
-                <value>"ProductVersion" = "8:{0}"</value>
-            </setting>
             <setting name="SetupProjectFile" serializeAs="String">
                 <value>\WSUI.OutlookPlugin\WSUI.OutlookPluginSetup\Product.wxs</value>
             </setting>
@@ -35,12 +23,5 @@
                 <value>1</value>
             </setting>
         </WSGen.Properties.Settings>
-    </applicationSettings>
-    <userSettings>
-        <WSGen.Properties.Settings>
-            <setting name="ProductCodeTemplate" serializeAs="String">
-                <value>"ProductCode" = "8:{0}"</value>
-            </setting>
-        </WSGen.Properties.Settings>
     </userSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup></configuration>
+</configuration>
