--- a/WSGen/Properties/Settings.settings
+++ b/WSGen/Properties/Settings.settings
@@ -2,31 +2,19 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="WSGen.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="BulidNumberFilename" Type="System.String" Scope="Application">
+    <Setting Name="BulidNumberFilename" Type="System.String" Scope="User">
       <Value Profile="(Default)">wsui.number</Value>
     </Setting>
-    <Setting Name="BuildNumber" Type="System.String" Scope="Application">
+    <Setting Name="BuildNumber" Type="System.String" Scope="User">
       <Value Profile="(Default)">1.0.0</Value>
     </Setting>
-    <Setting Name="VersionFilename" Type="System.String" Scope="Application">
+    <Setting Name="VersionFilename" Type="System.String" Scope="User">
       <Value Profile="(Default)">Version.cs</Value>
     </Setting>
-    <Setting Name="ProductVersion" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">"ProductVersion" = "8:[1-9]{1}\.[0-9]{1}\.[0-9]{1}"</Value>
-    </Setting>
-    <Setting Name="ProductCode" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">"ProductCode" = "8:\{[0-9a-fA-F]{8}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{12}\}"</Value>
-    </Setting>
-    <Setting Name="ProductVersionTemplate" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">"ProductVersion" = "8:{0}"</Value>
-    </Setting>
-    <Setting Name="ProductCodeTemplate" Type="System.String" Scope="User">
-      <Value Profile="(Default)">"ProductCode" = "8:{0}"</Value>
-    </Setting>
-    <Setting Name="SetupProjectFile" Type="System.String" Scope="Application">
+    <Setting Name="SetupProjectFile" Type="System.String" Scope="User">
       <Value Profile="(Default)">\WSUI.OutlookPlugin\WSUI.OutlookPluginSetup\Product.wxs</Value>
     </Setting>
-    <Setting Name="BuildCount" Type="System.Int32" Scope="Application">
+    <Setting Name="BuildCount" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
   </Settings>
