first implementation for previewing contact information if user selects it in Outlook (#220)

--- a/WSUI.OutlookPlugin/WSUI.OutlookPlugin.csproj
+++ b/WSUI.OutlookPlugin/WSUI.OutlookPlugin.csproj
@@ -178,6 +178,7 @@
     <Compile Include="Interfaces\IUpdatable.cs" />
     <Compile Include="Interfaces\IWSUICommandManager.cs" />
     <Compile Include="Core\BaseCommandManager.cs" />
+    <Compile Include="Interfaces\IWSUIOutlookItemEvents.cs" />
     <Compile Include="Managers\WSUIAboutCommandManager.cs" />
     <Compile Include="Managers\WSUICommandBarManager.cs" />
     <Compile Include="Managers\WSUIRibbonManager.cs" />
