--- a/WSUI.Module/WSUI.Module.csproj
+++ b/WSUI.Module/WSUI.Module.csproj
@@ -135,16 +135,14 @@
     <Compile Include="Core\BaseFilePreviewCommand.cs" />
     <Compile Include="Core\BasePreviewCommand.cs" />
     <Compile Include="Core\ContactKindDetailsViewModelBase.cs" />
-    <Compile Include="Core\DataViewModel.cs" />
     <Compile Include="Core\KindNameAttribute.cs" />
     <Compile Include="Core\KindsConstName.cs" />
     <Compile Include="Core\KindViewModelBase.cs" />
     <Compile Include="Core\LazyKind.cs" />
-    <Compile Include="Core\ViewModelBase.cs" />
     <Compile Include="Enums\Enums.cs" />
-    <Compile Include="Interface\Service\IAdvancedSearchCriteria.cs" />
     <Compile Include="Interface\Service\ICommandStrategy.cs" />
     <Compile Include="Interface\Service\INavigationService.cs" />
+    <Compile Include="Interface\ViewModel\IAdvancedSearchViewModel.cs" />
     <Compile Include="Interface\ViewModel\IContactAttachmentDetailsViewModel.cs" />
     <Compile Include="Interface\ViewModel\IContactDetailsViewModel.cs" />
     <Compile Include="Interface\ViewModel\IContactEmailDetailsViewModel.cs" />
@@ -170,7 +168,7 @@
     <Compile Include="Interface\View\IUIView.cs" />
     <Compile Include="Interface\Service\IWSCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service\AdvancedSearch\AdvancedSearchCriteria.cs" />
+    <Compile Include="Service\AdvancedSearch\AdvancedSearchTemplateSelector.cs" />
     <Compile Include="Service\AllFilesDataTemplateSelector.cs" />
     <Compile Include="Service\Behaviors\WSUIActualHeightBehavior.cs" />
     <Compile Include="Service\Behaviors\WSUIListboxSelectOnClickBehavior.cs" />
@@ -199,12 +197,19 @@
     <Compile Include="Strategy\CommadStrategyFactory.cs" />
     <Compile Include="Strategy\EmailCommandStrategy.cs" />
     <Compile Include="Strategy\FileCommandStrategy.cs" />
+    <Compile Include="ViewModel\AdvancedSearchViewModel.cs" />
     <Compile Include="ViewModel\AllFilesViewModel.cs" />
     <Compile Include="ViewModel\AttachmentViewModel.cs" />
     <Compile Include="ViewModel\ContactDetailsViewModel.cs" />
     <Compile Include="ViewModel\ContactViewModel.cs" />
     <Compile Include="ViewModel\EmailViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
+    <Compile Include="View\AdvancedSearchSettingsView.xaml.cs">
+      <DependentUpon>AdvancedSearchSettingsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\AdvancedSearchDataView.xaml.cs">
+      <DependentUpon>AdvancedSearchDataView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\AllFilesDataView.xaml.cs">
       <DependentUpon>AllFilesDataView.xaml</DependentUpon>
     </Compile>
@@ -282,6 +287,14 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Service\SearchButtonStyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\AdvancedSearchSettingsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\AdvancedSearchDataView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
