--- a/WSUI.Infrastructure/WSUI.Infrastructure.csproj
+++ b/WSUI.Infrastructure/WSUI.Infrastructure.csproj
@@ -147,6 +147,7 @@
     </Compile>
     <Compile Include="Converters\ActivationStatusToButtonVisibilityConverter.cs" />
     <Compile Include="Converters\ActivationStatusToGridVisibilityConverter.cs" />
+    <Compile Include="Converters\AdvancedSearchTypeToStringConverter.cs" />
     <Compile Include="Converters\StringToStringConverter.cs" />
     <Compile Include="Events\SelectedChangedPayloadEvent.cs" />
     <Compile Include="Helpers\AttachedProperty\ListBoxSelectedObjectAttachedProperty.cs" />
