--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,4 @@ pip-log.txt
 /WSUI.Site/WordPressVersion/wp-content/cache/page_enhanced/outlookfinder.com/try/_index.html.old
 /WSUI.Site/WordPressVersion/wp-content/cache/page_enhanced/outlookfinder.com/try/_index.html_gzip.old
 /ROutput
+/PSTRiverPlugin/target
