implementation of ES into OF; added indexing and storing attachments as a separate objects; improved and fixed some errors in the PST ES plugin; some minor changes;

--- a/WSUI.Core/WSUI.Core.csproj
+++ b/WSUI.Core/WSUI.Core.csproj
@@ -141,11 +141,13 @@
     <Compile Include="Data\AbstractSearchObject.cs" />
     <Compile Include="Data\AdressSearchObject.cs" />
     <Compile Include="Data\AppointmentSearchObject.cs" />
+    <Compile Include="Data\AttachmentContentSearchObject.cs" />
     <Compile Include="Data\AttachmentSearchObject.cs" />
     <Compile Include="Data\BaseEmailSearchObject.cs" />
     <Compile Include="Data\BaseSearchObject.cs" />
     <Compile Include="Data\CommandSearchObject.cs" />
     <Compile Include="Data\ContactSearchObject.cs" />
+    <Compile Include="Data\ElasticSearch\WSUIAttachmentContent.cs" />
     <Compile Include="Data\ElasticSearch\WSUIAppointment.cs" />
     <Compile Include="Data\ElasticSearch\WSUIAttachment.cs" />
     <Compile Include="Data\ElasticSearch\WSUIContact.cs" />
