--- a/PSTRiverPlugin/pom.xml
+++ b/PSTRiverPlugin/pom.xml
@@ -22,6 +22,16 @@
             <artifactId>java-libpst</artifactId>
             <version>0.8.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-core</artifactId>
+            <version>1.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-parsers</artifactId>
+            <version>1.7</version>
+        </dependency>
     </dependencies>
     
     <build>
