--- a/WSUI.Core/WSUI.Core.csproj
+++ b/WSUI.Core/WSUI.Core.csproj
@@ -89,6 +89,7 @@
     <Reference Include="Microsoft.Practices.Prism.Interactivity">
       <HintPath>..\Toolkits\Prism\Microsoft.Practices.Prism.Interactivity.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Practices.Unity, Version=2.1.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Nest">
       <HintPath>..\Toolkits\NEST.1.3.1\Nest.dll</HintPath>
     </Reference>
