--- a/WSUI.Core/OF.Core.csproj
+++ b/WSUI.Core/OF.Core.csproj
@@ -124,7 +124,7 @@
     <Compile Include="Data\ElasticSearch\Response\WSUIStatusItem.cs" />
     <Compile Include="Data\ElasticSearch\Response\WSUIStatusResponse.cs" />
     <Compile Include="Interfaces\IElasticSearchInitializationIndex.cs" />
-    <Compile Include="Core\ElasticSearch\WSUIElasticSearchClient.cs" />
+    <Compile Include="Core\ElasticSearch\OFElasticSearchClient.cs" />
     <Compile Include="Core\Event\BasePayloadEvent.cs" />
     <Compile Include="Core\LimeLM\LimeLM.cs" />
     <Compile Include="Core\LimeLM\TurboActivate.cs" />
@@ -251,7 +251,7 @@
     <Compile Include="Interfaces\ISystemSearchResult.cs" />
     <Compile Include="Interfaces\IWSAction.cs" />
     <Compile Include="Interfaces\IWSUIAttribute.cs" />
-    <Compile Include="Logger\WSSqlLogger.cs" />
+    <Compile Include="Logger\OFLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Dialog\Interfaces\IWSUIEmailViewModel.cs" />
     <Compile Include="Utils\Dialog\Interfaces\IWSUIView.cs" />
