base request for ES

--- a/WSUI.Core/OF.Core.csproj
+++ b/WSUI.Core/OF.Core.csproj
@@ -121,6 +121,24 @@
     <Compile Include="Core\Attributes\BaseWSUIAttribute.cs" />
     <Compile Include="Core\Attributes\EnumPrefixAttribute.cs" />
     <Compile Include="Core\Attributes\FieldAttribute.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Attachment\OFAttachmentSimpleContentTerm.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Attachment\OFAttachmentSimpleFilenameTerm.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Base\OFBaseDictionaryTerm.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Base\OFBaseTerm.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Contact\OFContactTerms.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Contact\OFEmaillContactTerms.cs" />
+    <Compile Include="Data\ElasticSearch\Request\OFBoolMust.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Email\OFSimpleContentTerm.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Email\OFSimpleSubjectTerm.cs" />
+    <Compile Include="Data\ElasticSearch\Request\OFBody.cs" />
+    <Compile Include="Data\ElasticSearch\Request\OFBodySort.cs" />
+    <Compile Include="Data\ElasticSearch\Request\OFBoolShould.cs" />
+    <Compile Include="Data\ElasticSearch\Request\OFQueryBoolMust.cs" />
+    <Compile Include="Data\ElasticSearch\Request\OFQueryBoolShould.cs" />
+    <Compile Include="Data\ElasticSearch\Request\OFQuerySimpleTerm.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Email\OFSortDateCreated.cs" />
+    <Compile Include="Data\ElasticSearch\Request\OFTerm.cs" />
+    <Compile Include="Data\ElasticSearch\Response\OFRawSearchResponse.cs" />
     <Compile Include="Data\ElasticSearch\Response\WSUIStatusItem.cs" />
     <Compile Include="Data\ElasticSearch\Response\WSUIStatusResponse.cs" />
     <Compile Include="Interfaces\IElasticSearchInitializationIndex.cs" />
@@ -241,6 +259,7 @@
     <Compile Include="Interfaces\IOutlookHelper.cs" />
     <Compile Include="Interfaces\IQueryGenerator.cs" />
     <Compile Include="Interfaces\IQueryReader.cs" />
+    <Compile Include="Interfaces\IRawSearchResult.cs" />
     <Compile Include="Interfaces\IResultMessage.cs" />
     <Compile Include="Interfaces\IRuleQueryGenerator.cs" />
     <Compile Include="Interfaces\ISearch.cs" />
