--- a/WSUI.Core/OF.Core.csproj
+++ b/WSUI.Core/OF.Core.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Data\ElasticSearch\Request\Attachment\OFAttachmentSimpleContentTerm.cs" />
     <Compile Include="Data\ElasticSearch\Request\Attachment\OFAttachmentSimpleFilenameTerm.cs" />
     <Compile Include="Data\ElasticSearch\Request\Base\OFBaseDictionaryTerm.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Base\OFBaseInternalBool.cs" />
     <Compile Include="Data\ElasticSearch\Request\Base\OFBaseTerm.cs" />
     <Compile Include="Data\ElasticSearch\Request\Contact\OFContactTerms.cs" />
     <Compile Include="Data\ElasticSearch\Request\Contact\OFEmaillContactTerms.cs" />
@@ -133,6 +134,8 @@
     <Compile Include="Data\ElasticSearch\Request\OFBody.cs" />
     <Compile Include="Data\ElasticSearch\Request\OFBodySort.cs" />
     <Compile Include="Data\ElasticSearch\Request\OFBoolShould.cs" />
+    <Compile Include="Data\ElasticSearch\Request\OFInternalBoolMust.cs" />
+    <Compile Include="Data\ElasticSearch\Request\OFInternalBoolShould.cs" />
     <Compile Include="Data\ElasticSearch\Request\OFQueryBoolMust.cs" />
     <Compile Include="Data\ElasticSearch\Request\OFQueryBoolShould.cs" />
     <Compile Include="Data\ElasticSearch\Request\OFQuerySimpleTerm.cs" />
@@ -268,6 +271,7 @@
     <Compile Include="Interfaces\ISearchRule.cs" />
     <Compile Include="Interfaces\ISearchSystem.cs" />
     <Compile Include="Interfaces\ISystemSearchResult.cs" />
+    <Compile Include="Interfaces\ITerm.cs" />
     <Compile Include="Interfaces\IWSAction.cs" />
     <Compile Include="Interfaces\IWSUIAttribute.cs" />
     <Compile Include="Logger\OFLogger.cs" />
