added tracking the status of PST river during working

--- a/WSUI.Core/OF.Core.csproj
+++ b/WSUI.Core/OF.Core.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Data\ElasticSearch\Response\OFHitsRaw.cs" />
     <Compile Include="Data\ElasticSearch\Response\OFRawSearchResponse.cs" />
     <Compile Include="Data\ElasticSearch\Response\OFResponseRaw.cs" />
+    <Compile Include="Data\ElasticSearch\Response\OFRiverStatus.cs" />
     <Compile Include="Data\ElasticSearch\Response\OFShardsRaw.cs" />
     <Compile Include="Data\ElasticSearch\Response\WSUIStatusItem.cs" />
     <Compile Include="Data\ElasticSearch\Response\WSUIStatusResponse.cs" />
